<resources>
    <string name="app_name">CoolRecyclerViewApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_person_label">Create new person</string>
    <string name="change_person_label">Change person info</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_photo">Choose photo</string>
    <string name="change_name">Name</string>
    <string name="change_email">Email</string>
    <string name="change_phone">Phone</string>
    <string name="change_button">Change</string>
    <string name="choose_photo_create_actitivity">Choose photo</string>
    <string name="create_name">Name</string>
    <string name="create_email">Email</string>
    <string name="create_phone">Phone</string>
    <string name="create_button">Create</string>
</resources>
